--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -959,7 +959,7 @@
   <string name="import_fragment__import_system_sms_database"> ఎస్సెమ్మెస్ దత్తాంశమూల వ్యవస్థ దిగుమతి</string>
   <string name="import_fragment__import_the_database_from_the_default_system">డిఫాల్ట్ వ్యవస్థ మెసెంజర్ అనువర్తనం నుండి దత్తాంశమూల దిగుమతి</string>
   <string name="import_fragment__import_plaintext_backup">సాధారణ అక్షరాల ప్రత్యామ్నాయ దిగుమతి </string>
-  <string name="import_fragment__import_a_plaintext_backup_file">సాదా ప్రత్యామ్నాయ పంక్తి దిగుమతి. \'ఎస్ఎంఎస్ ప్రత్యామ్నాయ &amp; అనుకూలంగా; పునరుద్ధరించు. \'</string>
+  <string name="import_fragment__import_a_plaintext_backup_file">స్పష్టమైన వాఖ్యం యొక్క ప్రత్యామ్నాయ ప్రణాళిక పంక్తి ని దిగుమతి చేయండి. \'SMS బ్యాకప్ &amp; పునరుద్ధరణతో అనుకూలమైనది.\'</string>
   <!--load_more_header-->
   <string name="load_more_header__see_full_conversation">పూర్తి సంభాషణ చూడండి</string>
   <string name="load_more_header__loading">లోడ్</string>
